# Spacecraft-Experiment

./: DESIGN  LICENSE  README  Spacecraft-Experiment.cabal  default.nix
app/: Main.hs
src/: Renderer.hs  RigidBodyDynamics.hs  Spacecraft2D.hs
